fix: add CORS configurations